[package]
name = "ssbu-gsp-mod"
version = "0.1.0"
authors = ["RoccoDev <hey@rocco.dev>"]
edition = "2018"
license = "GPL-3.0"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
msbt = { git = "https://github.com/RoccoDev/msbt-rs", branch = "feature/builder-from-impl" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
